--- a/site/module_3_solution/index.html
+++ b/site/module_3_solution/index.html
@@ -152,8 +152,8 @@
 
     <!-- jQuery first, then Popper & Bootstrap bundle JS-->
     <script src="js/jquery-3.4.1.slim.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<!--     <script src="js/bootstrap.bundle.min.js"></script> -->
+<!--     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
